Fix demo widgets for steam/itch/gamejolt

--- a/assets/_includes/widgets.html
+++ b/assets/_includes/widgets.html
@@ -63,20 +63,20 @@
   </p>
   {{/if}}
 
-  {{#if presskit.widgets.steam_demo}}
+  {{#if presskit.widgets.steamdemo}}
   <p>
-    <iframe src="https://store.steampowered.com/widget/{{trim presskit.widgets.steam_demo}}/" frameborder="0" class="widget widget--steam"></iframe>
+    <iframe src="https://store.steampowered.com/widget/{{trim presskit.widgets.steamdemo}}/" frameborder="0" class="widget widget--steam"></iframe>
   </p>
   {{/if}}
-  {{#if presskit.widgets.itch_demo}}
+  {{#if presskit.widgets.itchdemo}}
   <p>
-    <iframe src="https://itch.io/embed/{{trim presskit.widgets.itch_demo}}?dark=true" frameborder="0" class="widget widget--itch"></iframe>
+    <iframe src="https://itch.io/embed/{{trim presskit.widgets.itchdemo}}?dark=true" frameborder="0" class="widget widget--itch"></iframe>
   </p>
   {{/if}}
 
-  {{#if presskit.widgets.gamejolt_demo}}
+  {{#if presskit.widgets.gamejoltdemo}}
   <p>
-    <iframe src="https://widgets.gamejolt.com/package/v1?key={{trim presskit.widgets.gamejolt_demo}}" frameborder="0" class="widget widget--gamejolt"></iframe>
+    <iframe src="https://widgets.gamejolt.com/package/v1?key={{trim presskit.widgets.gamejoltdemo}}" frameborder="0" class="widget widget--gamejolt"></iframe>
   </p>
   {{/if}}
 
